force-app/main/default/objects/Course_Skill__c/Course_Skill__c.object-meta.xml
<CustomObject>
    <label>Compétence du cours</label>
    <nameField>
        <displayFormat>CdC-{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compétences du cours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>