force-app/main/default/objects/Course_Skill__c/fields/SIS_Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Compétences du cours</relationshipLabel>
    <relationshipName>Competences_du_cours</relationshipName>
    <type>Lookup</type>
</CustomField>