force-app/main/default/objects/Course_Skill__c/fields/SIS_Label__c.field-meta.xml
<CustomField>
    <fullName>SIS_Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>