force-app/main/default/objects/Course_Skill__c/fields/SIS_Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>SIS_Outcome_Type__c</fullName>
    <description>Champ masqué, utilisé pour différencier les connaissances et les compétences lors de leur création</description>
    <label>Type Objectif académique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connaissance</fullName>
            </value>
            <value>
                <fullName>Compétence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>