force-app/main/default/objects/Course_Skill__c/fields/SIS_Selected_Label__c.field-meta.xml
<CustomField>
    <fullName>SIS_Selected_Label__c</fullName>
    <formula>IF(
ISBLANK(SIS_Skills__c),
 SIS_Label__c,
 SIS_Skill_Label__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected Label</label>
    <type>Text</type>
</CustomField>