force-app/main/default/objects/Course_Skill__c/fields/SIS_Skill_Label__c.field-meta.xml
<CustomField>
    <fullName>SIS_Skill_Label__c</fullName>
    <formula>SIS_Skills__r.SIS_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Label</label>
    <type>Text</type>
</CustomField>