force-app/main/default/objects/Course_Skill__c/fields/SIS_Skills__c.field-meta.xml
<CustomField>
    <fullName>SIS_Skills__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skills</label>
    <referenceTo>SIS_Skill__c</referenceTo>
    <relationshipLabel>Course skills</relationshipLabel>
    <relationshipName>Course_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>