force-app/main/default/objects/Course_Skill__c/fields/SIS_Type__c.field-meta.xml
<CustomField>
    <fullName>SIS_Type__c</fullName>
    <formula>TEXT(SIS_Skills__r.SIS_Skills_Family__r.SIS_Skills_Family_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>