force-app/main/default/objects/Course_Skill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIS_Selected_Label__c</columns>
    <columns>SIS_Course_Offering__c</columns>
    <columns>SIS_Skills__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>